--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(p07_maze  level1/p07_maze/main.c)
 
 add_executable(p08_push_boxes  level1/p08_push_boxes/main.c)
 
-add_executable(p09_linked_list  level1/p09_linked_list/main.c)
+add_executable(p09_linked_list  level1/p09_linked_list/main.c
+        level1/p09_linked_list/list.h
+        level1/p09_linked_list/list.c)
 
 add_executable(p10_warehouse  level1/p10_warehouse/main.c)
